# EAML-SSM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  WORKFLOW_SETUP.md  demo.ipynb  demo.py  main.py  pyproject.toml
.github/workflows/: ci.yml
adaptation/: __init__.py  test_time_adaptation.py
core/: __init__.py  ssm.py
env_runner/: __init__.py  environment.py
meta_rl/: __init__.py  meta_maml.py
tests/: test_adaptation.py  test_experience_buffer.py  test_meta_rl.py  test_ssm.py
