[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaml-ssm"
version = "1.0.0"
description = "Experience-Augmented Meta-Learning with State-Space Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sunghun Kwag", email = "sunghunkwag@example.com"}
]
keywords = [
    "reinforcement-learning",
    "meta-learning",
    "state-space-models",
    "test-time-adaptation",
    "ssm",
    "meta-rl",
    "experience-replay"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "gymnasium>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sunghunkwag/EAML-SSM"
Repository = "https://github.com/sunghunkwag/EAML-SSM"

[tool.setuptools.packages.find]
where = ["."]  
include = ["core", "core.*", "meta_rl", "meta_rl.*", "env_runner", "env_runner.*", "adaptation", "adaptation.*", "experience", "experience.*"]
exclude = ["tests", "tests.*", "experiments", "experiments.*"]